tests/fixtures/invalid/pow_bool_int_float.py
# Cannot call pow() with Bool, Int, Float
x = pow(True, 1, 1.0)
